deploy/kubernetes/organ-forge-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: spinal-core
    component:  organ-forge
  name: organ-forge
  namespace: spinalcom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spinal-core
      component:  organ-forge
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spinal-core
        component:  organ-forge
    spec:
      containers:
      - name: spinal-organ-forge
        image: docker.io/fjudith/spinal-organ-forge:1.1.5-alpine
        imagePullPolicy: Always
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/spinal-organ-forge/viewerForgeFiles
          name: viewer
      volumes:
      - name: viewer
        persistentVolumeClaim:
          claimName: core-hub-viewer
status: {}
