deploy/kubernetes/organ-network_sample-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: spinal-core
    component:  organ-network-sample
  name: organ-network-sample
  namespace: spinalcom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spinal-core
      component:  organ-network-sample
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spinal-core
        component:  organ-network-sample
    spec:
      containers:
      - name: spinal-organ-network-sample
        image: docker.io/fjudith/spinal-organ-network_sample:1.0.1-alpine
        imagePullPolicy: Always
        resources: {}
status: {}
