deploy/kubernetes/http-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
  namespace: spinalcom
spec:
  selector:
    app: http-server
  ports:
    - name: http
      protocol: TCP
      port: 8892
      targetPort: 8892
